--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,181 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Outfit", sans-serif;
+  font-size: 1rem; 
+  height: 100vh;
 }
+
+.sect-one {
+  padding: 1em;
+
+  background-color: #F8CB2D;
+  font-size: 0.7em;
+  color: rgb(54, 52, 52);
+}
+
+.sect-one h1 {
+  margin-left: 5em;
+}
+
+.myvideo {
+
+  position: relative;
+ 
+
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; 
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.nav-body {
+  display: flex;
+  justify-content: space-between;
+
+  z-index: 3;
+  color: aliceblue;
+  position: absolute;
+  align-items: center;
+  
+  width: 100%;
+  
+ 
+  
+  
+}
+
+.nav-title {
+  font-size: 1.5vw;
+  padding: 5vh 2vh;
+ 
+   text-align: center;
+}
+
+.nav-menu {
+  display: flex;
+  padding: 5vh 2vh;
+  flex-wrap: nowrap;
+  
+}
+
+
+.nav-menu a {
+  text-decoration: none;
+  margin: 0 2vw;
+  font-size: 1.2rem;
+}
+
+.nav-menu_home1 {
+  color: aliceblue;
+}
+
+.nav-menu_home {
+  color: #ee5007;
+}
+
+.nav-menu a:hover {
+  color: #ee5007
+}
+
+.below-nav {
+  position: absolute;
+  color: rgb(241, 236, 229);
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 25%;  
+  width: 100%;
+
+ 
+}
+
+.below-nav p {
+  font-size: 2vw;
+}
+
+.below-nav h1 {
+  font-size: 4rem;
+}
+
+.below-nav button {
+  background-color: #ee5007;
+  color: white;
+  padding: 15px 25px;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-top: 2em;
+}
+
+.below-nav button:hover {
+
+  background-color: #C01F27;
+}
+
+.reservation {
+  position: absolute;
+  z-index: 3;
+  color: aliceblue;
+  top: 55%;
+  left: 15%;  
+  
+}
+
+.reservation img {
+  
+  position: absolute;
+  height: 45vh;
+  opacity: 0.5;
+  
+}
+
+.reservation h1 {
+  position: absolute;
+  top: 25vh;
+  left: 20vh;
+  font-size: 30px;
+}
+
+.reservation h2 {
+  position: absolute;
+  top: 25vh;
+  left: 44vh;
+  font-size: 30px;
+}
+
+.reservation h3 {
+  position: absolute;
+  top: 25vh;
+  left: 73vh;
+  font-size: 30px;
+}
+.pluss {
+  position: absolute;
+padding: 2px;
+  top: 33vh;
+  left: 14vh;
+  cursor: pointer;
+}
+
+.minuss{
+  position: absolute;
+  padding: 2px;
+  top: 33vh;
+  left: 24vh;
+  cursor: pointer;
+}
+
+
