--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ video {
 
 .nav-menu a {
   text-decoration: none;
-  margin: 0 2vw;
+  margin: 0 0 0 3vw;
   font-size: 1.2rem;
 }
 
@@ -85,7 +85,7 @@ video {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  top: 25%;  
+  top: 20%;  
   width: 100%;
 }
 
@@ -153,13 +153,13 @@ color: white;
     z-index: 3;
     background-color: #ee5007;
     color: white;
-    padding: 1vw 3vw;
+    padding: 1em 2em;
     border: none;
-    border-radius: 25px;
+    border-radius: 45px;
     cursor: pointer;
     font-weight: bold;
-    margin-top: 2em;
-    top: 20vw;
+    font-size: clamp(0.7rem, 1vw, 1.2rem);
+    top: 18vw;
     left: 50vw;
     text-align: center;
   }
